Let an option axis be one thing, and let it say which option it already is
`Axes` carried an option map and its declared default as separate components,
three times over, and the size axis carried two maps against one default. Seven
components saying three things. They are three `Axis<K, V>` records now, each
`(options, declared)`: `state` is `Axis<String, String>`, `variant` is
`Axis<String, Entity>`, `size` is `Axis<Size, Entity>`.

**A size form is a sub-definition, the way a coat already was.** Vanilla sizes a
subject two ways and they are not interchangeable - the small armour stand, the
two pufferfish bodies and the salmon's own `@scaled=` meshes are registered
through a `MeshTransformer` and carry the feet anchor, where slime and magma_cube
are scaled at the render, about the origin and with no anchor. So a form holds
whichever its own subject uses, and both are read off it. Folding either into the
other would move the subject, and folding the scale into a mesh would also stop
the orthographic canvas scaling with it.

**Every axis carries an entry for its declared option, so the type can assert
that it does.** The shipped size table lists only the alternates - the declared
size is what the bare row already is - and the axis carries it anyway, mapped to
that row. That is what makes the three axes one abstraction rather than two and
an exception, and it is what a reference key needs in order not to name one
appearance two ways.

`sizeDefault` was an `Optional<String>` compared against a lower-cased enum name;
it is an `Optional<Size>` now and `AppearanceCodec` spells the token only once a
selection has earned one. Its two method references became one `declares` call
reading the axis.

An axis is also a place to put behaviour: `select`, `isDeclared` and `none()` are
what the call sites were spelling by hand.

Both dumps move and nothing else does. The index holds the same meshes and the
same selections in a different shape, which is the whole of what changed: 22